--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,139 @@
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-.sidebar {
-    float: left;
-    width: 22%;
-    height: 100%;
-    position: fixed;
-    background-color: #000000;
-    overflow: hidden;
-    padding: 8px;
-    left: 0;
-    top: 0;
-    
-    /* float: left;
-	width: 250px;
-	height: 100vh;
-	min-height: 400px;
-	overflow: auto;
-	background: black;
-	padding: 30px;
-	text-align: left;
-	position: fixed;
-	left: 0;
-	top: 0; */
+body {
+    color: brgb(59, 59, 59);
+    font-weight: 400;
+    background: #000;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
-.main-menu ul {
+/* BACKGROUND IMAGE */
+
+.main-content {
+    float: right;
+    width: calc(100% - 250px);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+/* MAIN TITLE */
+
+.main-title {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    top: 70px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: normal;
+    line-height: 115.69%;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+}
+
+.font-title {
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.font-slogan {
+    font-weight: 500;
+    font-size: 20px;
+}
+
+/* MAIN MENU */
+
+.sidebar {
+    float: left;
+    height: 100vh;
+    position: relative;
+    background-color: #000000;
+    overflow: hidden;
+    left: 0;
+    top: 0;
+    z-index: 2;
+}
+
+.sidebar .logo {
+    display: block;
+    height: 70px;
+    margin: 7px auto;
+    background-size: 120px;
+}
+
+.main-menu {
+    -moz-flex-grow: 0;
+    -webkit-flex-grow: 0;
+    -ms-flex-grow: 0;
+    flex-grow: 0;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+    -ms-flex-shrink: 0;
+    flex-shrink: 0;
+    -moz-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
+    -webkit-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
+    -ms-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
+    transition: margin-left 0.5s ease, box-shadow 0.5s ease;
+    position: relative;
+    width: 210px;
+}
+
+#menu {
+    margin-top: 5px;
+}
+
+#menu ul {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    color: rgba(255, 255, 255, 0.8);
+    color: #3d4449;
+    font-family: 400;
     list-style: none;
     margin-bottom: 0;
     padding: 0;
 }
-.main-menu ul li a, .main-menu ul li span {
+
+#menu ul a, #menu ul span {
     font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     color: #fff;
-	border-bottom: 0;
-	cursor: pointer;
-	display: block;
-	font-size: 16px;
-	padding: 15px 0px;
-    text-decoration: none; 
- 
-}
-.main-menu > ul > li:first-child {
-    border-top: 0;
-    margin-top: 0;
-    padding-top: 0;
-}
-.main-menu > ul > li {
-    border-top: solid 1px #6d646411;
-    margin: 0.2em 0 0 0;
-    padding: 0.2em 0 0 0;
-}
-
-
-.main-menu a i{
-    font-size: 18px;
-}
-
-
-.sidebar .logo {
+    border-bottom: 0;
+    cursor: pointer;
     display: block;
-    height: 100px;
-    margin: 0 auto; 
-    background-size: 170px;
+    font-size: 13px;
+    padding: 5px 15px;
+    text-decoration: none;
 }
 
-    
-.img {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+#menu ul li ul a, #menu ul li ul span {
+    padding: 10px 0px;
 }
 
-.main-menu ul li a.opener:before,
-.main-menu ul li span.opener:before {
+#menu ul a:hover, #menu ul span:hover {
+    color: #b1bbc5d7;
+}
+
+#menu ul a.opener, #menu ul span.opener {
+    -moz-transition: color 0.2s ease-in-out;
+    -webkit-transition: color 0.2s ease-in-out;
+    -ms-transition: color 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out;
+    text-decoration: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    position: relative;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+#menu ul a.opener:before, #menu ul span.opener:before {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-transform: none !important;
+}
+
+#menu ul a.opener:before, #menu ul span.opener:before {
     -moz-transition: color 0.2s ease-in-out, -moz-transform 0.2s ease-in-out;
     -webkit-transition: color 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
     -ms-transition: color 0.2s ease-in-out, -ms-transform 0.2s ease-in-out;
@@ -84,5 +141,504 @@
     color: #fff;
     content: '\f0dd';
     position: absolute;
+    right: 20px;
+}
+
+#menu ul a.opener.active:before, #menu ul span.opener.active:before {
+    -moz-transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+}
+
+#menu>ul>li {
+    border-top: solid 1px #1a1b20;
+}
+
+#menu>ul>li>ul {
+    color: #00ff0d;
+    display: none;
+    padding-left: 1em;
+}
+
+#menu .feat-show.active {
+    display: block;
+    -webkit-animation: slide-down 0.5s ease-out;
+    -moz-animation: slide-down 0.5s ease-out;
+    padding-left: 12px
+}
+
+@-webkit-keyframes stop-transition {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes slide-down {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes slide-down {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+#menu>ul>li>ul a, #menu>ul>li>ul span {
+    font-size: 13px;
+}
+
+#menu>ul>li>ul label {
+    font-size: 13px;
+    color: black;
+    padding-left: 10px;
+}
+
+#menu>ul>li>ul li:first-child label {
+    padding-top: 6px;
+}
+
+#menu>ul>li>ul>li {
+    margin: 0;
+    padding: 0;
+}
+
+#menu>ul>li:first-child {
+    border-top: 0;
+    margin-top: 0;
+    padding-top: 0;
+}
+
+@media (min-width: 1800px) {
+    .main-menu ul li a, .main-menu ul li span {
+        font-size: 16px;
+    }
+}
+
+.img {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/* FOOTER */
+
+.red-color {
+    color: #BC271B
+}
+
+.footer {
+    position: fixed;
+    width: 100%;
+    height: fit-content;
+    background-color: #ffffff;
+    z-index: 3;
+    left: 0;
+    bottom: 0;
+    display: inline-block;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+}
+
+.middle-text {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 137.19%;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.01em;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.site-section {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    float: right;
     right: 0;
+    top: 0;
+    background-position: 50% 0px;
+    overflow-y: auto;
+}
+
+.bg-image {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+/* SLIDER CAROUSEL */
+
+.section-title {
+    margin-left: 50px;
+    margin-top: 150px;
+}
+
+.section-title h5 {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 700;
+    font-style: italic;
+    padding-left: 16px;
+    position: relative;
+    letter-spacing: 1px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.section-title h5:after {
+    position: absolute;
+    left: 0;
+    top: 3px;
+    height: 15px;
+    width: 11px;
+    background: #c20000;
+    content: "";
+    -webkit-transform: skewX(-15deg);
+    -ms-transform: skewX(-15deg);
+    transform: skewX(-15deg);
+}
+
+.carousel {
+    margin: 45px auto 60px;
+    padding: 0px 30px;
+}
+
+.carousel .carousel-item {
+    text-align: center;
+    overflow: hidden;
+}
+
+.carousel .carousel-item h4 {
+    font-family: 'Varela Round', sans-serif;
+}
+
+.carousel .carousel-item img {
+    max-width: 100%;
+    display: inline-block;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.carousel .carousel-item .btn {
+    border-radius: 60px 60px;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    background: #bd2130;
+    padding: 6px 15px;
+    margin-top: 5px;
+}
+
+.carousel .carousel-item .btn:hover {
+    background: #cf3232da;
+}
+
+.carousel .carousel-item .btn i {
+    font-size: 14px;
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+.carousel .thumb-wrapper {
+    margin: 5px;
+    text-align: left;
+    background: #fff;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.carousel .thumb-content {
+    padding: 15px;
+    font-size: 13px;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    height: 44px;
+    width: 44px;
+    background: none;
+    top: -60px;
+}
+
+.carousel-control-prev i, .carousel-control-next i {
+    font-size: 25px;
+    position: absolute;
+    top: 50%;
+    display: inline-block;
+    z-index: 5;
+    left: 0;
+    right: 0;
+    color: white;
+    text-shadow: none;
+    font-weight: bold;
+}
+
+.carousel-control-prev i {
+    margin-left: 50px;
+}
+
+.carousel-control-next i {
+    margin-right: -3px;
+}
+
+.carousel-indicators {
+    bottom: -40px;
+    z-index: 1;
+}
+
+.carousel-indicators li, .carousel-indicators li.active {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 4px;
+    border: none;
+    z-index: -1;
+}
+
+.carousel-indicators li {
+    background: #ababab;
+}
+
+.carousel-indicators li.active {
+    background: #555;
+}
+
+/* ALL RESPONSIVE */
+
+@media (max-width: 1300px) {
+    .sidebar {
+        display: none;
+    }
+    .main-content {
+        width: 100%;
+    }
+    .carousel {
+        margin: 15px ​auto 60px;
+    }
+    .carousel-indicators {
+        bottom: -32px;
+    }
+    .carousel .carousel-item h4 {
+        font-size: 18px;
+    }
+    .carousel-indicators li, .carousel-indicators li.active {
+        width: 8px;
+        height: 8px;
+    }
+}
+
+@media (max-width: 800px) {
+    .section-title {
+        margin-top: 190px;
+    }
+    .font-title {
+        font-size: 33px;
+    }
+    .sidebar {
+        display: none;
+    }
+    .main-content {
+        width: auto;
+    }
+    .carousel {
+        margin: 20px auto 60px
+    }
+    .carousel .carousel-item h4 {
+        font-size: 14px;
+    }
+    .carousel .carousel-item .btn {
+        font-size: 8px;
+    }
+    .carousel-indicators li, .carousel-indicators li.active {
+        width: 6px;
+        height: 6px;
+    }
+}
+
+@media (max-width: 600px) {
+    .footer {
+        display: none;
+    }
+    .font-title {
+        font-size: 25px;
+    }
+}
+
+/* CAROUSEL ARROW RESPONSIVE */
+
+@media (max-width: 2000px) {
+    .carousel-control-prev {
+        left: 80%
+    }
+    .carousel-control-next {
+        right: 10%
+    }
+}
+
+@media (max-width: 1100px) {
+    .carousel-control-prev {
+        left: 78%
+    }
+    .carousel-control-next {
+        right: 10%
+    }
+}
+
+@media (max-width: 990px) {
+    .carousel-control-prev, .carousel-control-next {
+        height: 20px;
+        width: 20px;
+    }
+    .carousel-control-prev i, .carousel-control-next i {
+        font-size: 20px;
+    }
+    .carousel-control-prev {
+        left: 80%
+    }
+    .carousel-control-next {
+        right: 10%
+    }
+}
+
+@media (max-width: 790px) {
+    .carousel-control-prev, .carousel-control-next {
+        height: 20px;
+        width: 20px;
+    }
+    .carousel-control-prev i, .carousel-control-next i {
+        font-size: 15px;
+    }
+    .carousel-control-prev {
+        left: 78%
+    }
+    .carousel-control-next {
+        right: 10%
+    }
+}
+
+@media (max-width: 700px) {
+    .carousel-control-prev, .carousel-control-next {
+        display: none;
+    }
+}
+
+/* ARROW DOWN TAB MENU */
+
+.arrow-down.active {
+    content: '';
+    position: absolute;
+    top: 33px;
+    left: 20%;
+    width: 0;
+    height: 0;
+    border-top: solid 12px #404047;
+    border-left: solid 12px transparent;
+    border-right: solid 12px transparent;
+    z-index: 2;
+}
+
+/* CHECKBOX MENU */
+
+.list-checkbox {
+    background-color: white;
+}
+
+.checkbox .cr, .radio .cr {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #a9a9a9;
+    border-radius: .25em;
+    width: 1.3em;
+    height: 1.3em;
+    float: left;
+    margin-right: .5em;
+}
+
+.checkbox .cr .cr-icon, .radio .cr .cr-icon {
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+}
+
+.list {
+    padding: 0.5rem 1rem;
+    margin: 0.5rem 0.5rem 2rem 0.5rem;
+    border-left: 0.1875rem solid #16a085;
+}
+
+.list__item {
+    margin: 0 0 0.5rem 0;
+    padding: 0;
+}
+
+.label--checkbox, .label--radio {
+    position: relative;
+    margin: 0.5rem;
+    font-family: Arial, sans-serif;
+    line-height: 135%;
+    cursor: pointer;
+}
+
+.checkbox {
+    position: relative;
+    margin: 0 1rem 0 0;
+    cursor: pointer;
+}
+
+.checkbox:before {
+    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.45, 1.8, 0.5, 0.75);
+    -moz-transition: -moz-transform 0.4s cubic-bezier(0.45, 1.8, 0.5, 0.75);
+    transition: transform 0.4s cubic-bezier(0.45, 1.8, 0.5, 0.75);
+    -webkit-transform: rotate(-45deg) scale(0, 0);
+    -moz-transform: rotate(-45deg) scale(0, 0);
+    -ms-transform: rotate(-45deg) scale(0, 0);
+    -o-transform: rotate(-45deg) scale(0, 0);
+    transform: rotate(-45deg) scale(0, 0);
+    content: "";
+    position: absolute;
+    left: 0.1875rem;
+    top: 0.125rem;
+    z-index: 1;
+    width: 0.75rem;
+    height: 0.375rem;
+    border: 2px solid #000000;
+    border-top-style: none;
+    border-right-style: none;
+}
+
+.checkbox:checked:before {
+    -webkit-transform: rotate(-45deg) scale(1, 1);
+    -moz-transform: rotate(-45deg) scale(1, 1);
+    -ms-transform: rotate(-45deg) scale(1, 1);
+    -o-transform: rotate(-45deg) scale(1, 1);
+    transform: rotate(-45deg) scale(1, 1);
+}
+
+.checkbox:after {
+    content: "";
+    position: absolute;
+    top: -0.125rem;
+    left: 0;
+    width: 1rem;
+    height: 1rem;
+    background: #fff;
+    border: 2px solid #c7c7c794;
+    cursor: pointer;
 }
